--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,13 @@
 	</dependencies>
 
 	<build>
+	    <finalName>spring-boot-web</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
 
